--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.history
 
 artifacts/channel/mychannel.tx
 genesis.block
